--- a/src/portfolioweb.css
+++ b/src/portfolioweb.css
@@ -21,6 +21,12 @@ h4{
     align-items : center;
 }
 
+.menu__box {
+    color :white;
+    
+}
+
+
 .header__top {
     display : flex;
     align-items : center;
@@ -50,6 +56,7 @@ h4{
 
 .upper__title {
     color : gray;
+    text-transform : uppercase;
 }
 
 .main__title {
@@ -92,7 +99,9 @@ h4{
     top : 40px;
     align-self : flex-end;
     writing-mode: vertical-rl;
-    height : 50vh;
+    height : 32vh;
+    margin-right : 3vw;
+    transform:rotate(90deg);
 }
 
 .nav__box {
