--- a/src/magazine.css
+++ b/src/magazine.css
@@ -161,6 +161,6 @@ body {
     justify-content : center;
 }
 
-h5:nth-child(1) {
+.main__footer__pages h5:nth-child(1) {
     text-decoration : line-through;
 }
