--- a/docs/mypage.css
+++ b/docs/mypage.css
@@ -85,17 +85,36 @@ h1, h5, h6 {
 }
 
 .title {
-    font-size : 100px;
+    font-size : 80px;
     margin-top : 50px;
-    position : absolute;
+    margin-left : 20px;
     left : 10vw;
     font-weight : 5000;
+}
+
+.money {
+    font-size : 70px;
+    margin-top : 20px;
+    margin-left : 20px;
+}
+
+.money__unit {
+    font-size : 70px;
+    margin-top : 20px;
+    margin-left : 20px;
+}
+
+.money__container {
+    display : flex;
+    justify-content : space-between;
+    margin-top : 20px;
+    margin-right : 20px;
 }
 
 .search__container {
     display : flex;
     justify-content : space-between;
-    height : 15vh;
+    height : 5vh;
     align-items : flex-end;
     padding : 0 20px;
     margin-bottom : 5vh;
@@ -186,3 +205,25 @@ hr {
 .blue_ {
     color : blue;
 }
+
+
+/* (A) PIE CHART */
+.pie {
+    /* (A1) CIRCLE */
+    width: 300px; height: 300px;
+    border-radius: 50%;
+   
+    /* (A2) SEGMENTS */
+    background: conic-gradient(
+      red 0deg 45deg,
+      green 45deg 190deg,
+      blue 190deg 360deg
+    );
+  }
+
+  .pie__container {
+        display : flex;
+        justify-content : center;
+        margin : 30px 20px;
+  }
+
